# Library_Examples

./: Dockerfile  Examples_Notebook.ipynb  README.md  docker-compose.yaml  localstack_create_bucket.py  pyproject.toml
dags/: healthcare_data_grab_cloud.py  healthcare_data_grab_local.py
dags/__pycache__/: healthcare_data_grab_local.cpython-310.pyc:Zone.Identifier
